header nav on mobile fixed, all cities dropdown in

--- a/_sass/_global.scss
+++ b/_sass/_global.scss
@@ -227,6 +227,7 @@ a.circle-arrow {
   width: 40px;
   height: 40px;
   background: $grey-light url(../uploads/global/arrow-right-dark.svg) no-repeat center;
+  background-size: 17px 12px;
   border-radius: 20px;
   @extend .w-shadow;
   transition: all 0.4s;
@@ -271,25 +272,68 @@ a.circle-arrow {
   }
 }
 
+.content-dropdown {
+
+  .content-dropdown__opener {
+    width: 100%;
+    text-align: right;
+    border-bottom: 1px solid #D3D4D8;
+    margin-right: 130px;
+    a {
+      @extend h4;
+      padding: 0 25px;
+      display: inline-block;
+      transform: translateY(10px);
+      background-color: $white;
+      cursor: pointer;
+
+      &:hover {
+        color: darken($sky-blue, 10%);
+
+      }
+    }
+  }
+
+  .content-dropdown__content {
+    display: none;
+  }
+
+  li {
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 12px;
+    color: $grey2;
+    margin-top: rem(8px);
+    &.category {
+      color: $olive-matt;
+      font-weight: 600;
+      &:not(:first-child) {
+        margin-top: rem(20px);
+      }
+    }
+  }
+}
+
+
 
 .cta-banner {
-    padding: rem(150px) 0;
-    background-size: cover;
-    background-repeat: no-repeat;
-    //background-image: url(../img/careers/teams.jpg);
-    background-position: center;
-    transform: translateY(50px);
-    @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
-      //background-image: url(../img/careers/teams@2x.jpg);
-    }
-    h2 {
-      margin-bottom: rem(38px);
-    }
+  padding: rem(150px) 0;
+  background-size: cover;
+  background-repeat: no-repeat;
+  //background-image: url(../img/careers/teams.jpg);
+  background-position: center;
+  transform: translateY(50px);
+  @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
+    //background-image: url(../img/careers/teams@2x.jpg);
   }
+  h2 {
+    margin-bottom: rem(38px);
+  }
+}
 
-  .block-footer-cta-1 ~ footer {
-    padding-top: rem(125px);
-  }
+.block-footer-cta-1 ~ footer {
+  padding-top: rem(125px);
+}
 
 
 .footer {
